[tool.poetry]
name = "pypong"
version = "0.1.0"
description = ""
authors = ["Volker Janz <volker.janz@innogames.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^1.9"
numpy = "^1.17"
sklearn = "^0.0.0"
matplotlib = "^3.1"
seaborn = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
